// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Trigger > enables a single day on click 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_39_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_39_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3c_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3c_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3b_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3c_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3e_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3e_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3g_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3g_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3j_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3j_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3i_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3j_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3l_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3l_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3n_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3n_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3q_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_3q_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_3p_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_3q_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_44_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_44_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_43_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_44_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3v_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3v_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3u_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3v_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_41_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_41_"
            value="0 0 0 ? * 0,2,4,5,6"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders all week days enabled 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_2c_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_2c_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2f_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_2f_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2e_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_2f_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2h_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2h_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2j_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2j_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2m_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_2m_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2l_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_2m_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2o_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2o_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2q_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2q_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2t_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_2t_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_2s_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_2t_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_37_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_37_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_36_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_37_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_32_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_32_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_31_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_32_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_34_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_34_"
            value="0 0 0 ? *"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders periodic schedule controls for initial render 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_0_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_0_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_5_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_5_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_7_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_7_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_a_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_a_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_9_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_a_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_c_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_c_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_e_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_e_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_h_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_h_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_g_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_h_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_j_"
          >
            Interval
            <span
              aria-hidden="true"
            >
               *
            </span>
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_j_"
              min="1"
              required=""
              type="number"
              value="1"
            />
          </div>
        </div>
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minutes
            </option>
            <option
              value="Hour"
            >
              Hours
            </option>
            <option
              value="Day"
            >
              Days
            </option>
            <option
              value="Week"
            >
              Weeks
            </option>
            <option
              value="Month"
            >
              Months
            </option>
          </select>
        </label>
      </div>
    </fieldset>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders periodic schedule controls if the trigger type is CRON 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_l_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_l_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_o_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_o_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_n_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_o_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_q_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_q_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_s_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_s_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_v_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_v_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_u_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_v_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_11_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_11_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_13_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_13_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_16_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_16_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_15_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_16_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1b_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1b_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1a_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1b_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_1d_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_1d_"
            value="0 0 * * * ?"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders week days if the trigger type is CRON and interval is weekly 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_1f_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_1f_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1i_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1i_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1h_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1i_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1k_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1k_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1m_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1m_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1p_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1p_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1o_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1p_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1r_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1r_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1t_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1t_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_20_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_20_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_1v_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_20_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2a_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_2a_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_29_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_2a_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_25_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_25_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_24_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_25_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_27_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_27_"
            value="0 0 0 ? * *"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;
